[package]
name = "par"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Session types, as an implementation of linear logic with MIX"
repository = "https://github.com/faiface/par"

[features]
default = ["examples"]
runtime-tokio = ["tokio"]
examples = ["runtime-tokio", "fastrand", "tokio-tungstenite"]

[dependencies]
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.24.0", optional = true }
fastrand = { version = "2.1.1", optional = true }
